@@ -43,6 +43,7 @@
 	* fix uTP edge case where udp socket buffer fills up
 	* fix nagle implementation in uTP
 
+	* improve error handling in http gunzip
 	* fix debug logging for banning web seeds
 	* improve support for de-selected files in full allocation mode
 	* fix dht_bootstrap_alert being posted
